# bplace

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
front/: Dockerfile  package.json
front/public/: index.html
front/src/: App.css  App.tsx
src/: database.rs  main.rs
