[package]
name = "bplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.1"
actix-cors = "0.6.1"
mongodb = "2.1"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
lazy_static = "*"
rand = "*"
env_logger = "*"